--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
 </head>
 
 <body>
-    
+<!--   /*================ Header ================*/-->
+    <header class="main-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-3">
+                    <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </header>
+<!--    /*================ Banner ================*/-->
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
