--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="">
+    <meta name="author" content="">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <title>SGS - HOME</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<!--   /*================ Header ================*/-->
+    <!--   /*================ Header ================*/-->
     <header class="main-header">
         <div class="container">
             <div class="row">
@@ -34,7 +34,21 @@
             </div>
         </div>
     </header>
-<!--    /*================ Banner ================*/-->
+    <!--    /*================ Banner ================*/-->
+    <section class="banner">
+        <div class="container relative">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading">
+                        <h1>Excellent Delivery <br> & Time Concious <br> with every</h1>
+                        <h2>Project </h2>
+                        <a href="#" class="button btn">Begin Here</a>
+                    </div>
+                </div>
+            </div>
+            <div class="women-pic"><img class="img-responsive" src="images/banner-women.png" alt=""></div>
+        </div>
+    </section>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
