--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
             <div class="women-pic"><img class="img-responsive" src="images/banner-women.png" alt=""></div>
         </div>
     </section>
+<!--    /*================ Banner bottom ================*/-->
+    <section class="banner-bootom">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2>Whether you already own a bu-siness or about to launch a new business, we offer you the best ICT solutions to get started – App, Website, Promotional Videos and general Branding.</h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
