--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>SGS - HOME</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -59,6 +59,62 @@
             </div>
         </div>
     </section>
+<!--    /*================ Service ================*/-->
+   <section class="service">
+       <div class="container">
+           <div class="row">
+               <div class="col-xs-12">
+                   <div class="head">
+                       <h2>Choose to get started...</h2>
+                   </div>
+               </div>
+           </div>
+           <div class="row">
+               <div class="col-md-4">
+                   <div class="content text-center">
+                       <img src="images/service-1.png" alt="" class="img-responsive">
+                       <h3>Custom Website</h3>
+                       <p>Development</p>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <div class="content text-center">
+                       <img src="images/service-2.png" alt="" class="img-responsive">
+                       <h3>Custom Website</h3>
+                       <p>Development</p>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <div class="content text-center">
+                       <img src="images/service-3.png" alt="" class="img-responsive">
+                       <h3>Custom Website</h3>
+                       <p>Development</p>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <div class="content text-center">
+                       <img src="images/service-4.png" alt="" class="img-responsive">
+                       <h3>Custom Website</h3>
+                       <p>Development</p>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <div class="content text-center">
+                       <img src="images/service-5.png" alt="" class="img-responsive">
+                       <h3>Custom Website</h3>
+                       <p>Development</p>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <div class="content text-center">
+                       <img src="images/service-6.png" alt="" class="img-responsive">
+                       <h3>Custom Website</h3>
+                       <p>Development</p>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </section>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
