--- a/index.html
+++ b/index.html
@@ -115,6 +115,38 @@
            </div>
        </div>
    </section>
+<!--   /*================ Step-work ================*/-->
+   <section class="step-work">
+       <div class="container">
+           <div class="row">
+               <div class="col-xs-12">
+                   <div class="head">
+                       <h2>How it works in 3 Steps</h2>
+                   </div>
+               </div>
+           </div>
+           <div class="row">
+               <div class="col-md-4">
+                   <div class="content">
+                       <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
+                       <h3>Click on the required service</h3>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <div class="content">
+                       <div class="img"><img src="images/work-2.png" alt="" class="img-responsive"></div>
+                       <h3>Fill up the <br> required details</h3>
+                   </div>
+               </div>
+               <div class="col-md-4">
+                   <div class="content">
+                       <div class="img"><img src="images/work-3.png" alt="" class="img-responsive"></div>
+                       <h3>You’ll hear from us <br>sooner than 24 hours</h3>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </section>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
