--- a/index.html
+++ b/index.html
@@ -72,44 +72,56 @@
            <div class="row">
                <div class="col-md-4">
                    <div class="content text-center">
-                       <img src="images/service-1.png" alt="" class="img-responsive">
+                       <div class="img">
+                           <img src="images/service-1.png" alt="" class="img-responsive">
+                       </div>
                        <h3>Custom Website</h3>
                        <p>Development</p>
                    </div>
                </div>
                <div class="col-md-4">
                    <div class="content text-center">
-                       <img src="images/service-2.png" alt="" class="img-responsive">
-                       <h3>Custom Website</h3>
-                       <p>Development</p>
+                       <div class="img">
+                           <img src="images/service-2.png" alt="" class="img-responsive">
+                       </div>
+                       <h3>Custom Mobile Apps</h3>
+                       <p>Design</p>
                    </div>
                </div>
                <div class="col-md-4">
                    <div class="content text-center">
-                       <img src="images/service-3.png" alt="" class="img-responsive">
-                       <h3>Custom Website</h3>
-                       <p>Development</p>
+                       <div class="img">
+                           <img src="images/service-3.png" alt="" class="img-responsive">
+                       </div>
+                       <h3>E-Commerce</h3>
+                       <p>Design</p>
                    </div>
                </div>
                <div class="col-md-4">
                    <div class="content text-center">
-                       <img src="images/service-4.png" alt="" class="img-responsive">
-                       <h3>Custom Website</h3>
-                       <p>Development</p>
+                       <div class="img">
+                           <img src="images/service-4.png" alt="" class="img-responsive">
+                       </div>
+                       <h3>Custom Video</h3>
+                       <p>Animation Design</p>
                    </div>
                </div>
                <div class="col-md-4">
                    <div class="content text-center">
-                       <img src="images/service-5.png" alt="" class="img-responsive">
-                       <h3>Custom Website</h3>
-                       <p>Development</p>
+                       <div class="img">
+                           <img src="images/service-5.png" alt="" class="img-responsive">
+                       </div>
+                       <h3>Branding</h3>
+                       <p>Design</p>
                    </div>
                </div>
                <div class="col-md-4">
                    <div class="content text-center">
-                       <img src="images/service-6.png" alt="" class="img-responsive">
-                       <h3>Custom Website</h3>
-                       <p>Development</p>
+                       <div class="img">
+                           <img src="images/service-6.png" alt="" class="img-responsive">
+                       </div>
+                       <h3>Custom Solutions</h3>
+                       <p>Design</p>
                    </div>
                </div>
            </div>
