--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="women-pic"><img class="img-responsive" src="images/banner-women.png" alt=""></div>
         </div>
     </section>
-<!--    /*================ Banner bottom ================*/-->
+    <!--    /*================ Banner bottom ================*/-->
     <section class="banner-bootom">
         <div class="container">
             <div class="row">
@@ -59,106 +59,160 @@
             </div>
         </div>
     </section>
-<!--    /*================ Service ================*/-->
-   <section class="service">
-       <div class="container">
-           <div class="row">
-               <div class="col-xs-12">
-                   <div class="head">
-                       <h2>Choose to get started...</h2>
-                   </div>
-               </div>
-           </div>
-           <div class="row">
-               <div class="col-md-4">
-                   <div class="content text-center">
-                       <div class="img">
-                           <img src="images/service-1.png" alt="" class="img-responsive">
-                       </div>
-                       <h3>Custom Website</h3>
-                       <p>Development</p>
-                   </div>
-               </div>
-               <div class="col-md-4">
-                   <div class="content text-center">
-                       <div class="img">
-                           <img src="images/service-2.png" alt="" class="img-responsive">
-                       </div>
-                       <h3>Custom Mobile Apps</h3>
-                       <p>Design</p>
-                   </div>
-               </div>
-               <div class="col-md-4">
-                   <div class="content text-center">
-                       <div class="img">
-                           <img src="images/service-3.png" alt="" class="img-responsive">
-                       </div>
-                       <h3>E-Commerce</h3>
-                       <p>Design</p>
-                   </div>
-               </div>
-               <div class="col-md-4">
-                   <div class="content text-center">
-                       <div class="img">
-                           <img src="images/service-4.png" alt="" class="img-responsive">
-                       </div>
-                       <h3>Custom Video</h3>
-                       <p>Animation Design</p>
-                   </div>
-               </div>
-               <div class="col-md-4">
-                   <div class="content text-center">
-                       <div class="img">
-                           <img src="images/service-5.png" alt="" class="img-responsive">
-                       </div>
-                       <h3>Branding</h3>
-                       <p>Design</p>
-                   </div>
-               </div>
-               <div class="col-md-4">
-                   <div class="content text-center">
-                       <div class="img">
-                           <img src="images/service-6.png" alt="" class="img-responsive">
-                       </div>
-                       <h3>Custom Solutions</h3>
-                       <p>Design</p>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </section>
-<!--   /*================ Step-work ================*/-->
-   <section class="step-work">
-       <div class="container">
-           <div class="row">
-               <div class="col-xs-12">
-                   <div class="head">
-                       <h2>How it works in 3 Steps</h2>
-                   </div>
-               </div>
-           </div>
-           <div class="row">
-               <div class="col-md-4">
-                   <div class="content">
-                       <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
-                       <h3>Click on the required service</h3>
-                   </div>
-               </div>
-               <div class="col-md-4">
-                   <div class="content">
-                       <div class="img"><img src="images/work-2.png" alt="" class="img-responsive"></div>
-                       <h3>Fill up the <br> required details</h3>
-                   </div>
-               </div>
-               <div class="col-md-4">
-                   <div class="content">
-                       <div class="img"><img src="images/work-3.png" alt="" class="img-responsive"></div>
-                       <h3>You’ll hear from us <br>sooner than 24 hours</h3>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </section>
+    <!--    /*================ Service ================*/-->
+    <section class="service">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="head">
+                        <h2>Choose to get started...</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="content text-center">
+                        <div class="img">
+                            <img src="images/service-1.png" alt="" class="img-responsive">
+                        </div>
+                        <h3>Custom Website</h3>
+                        <p>Development</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content text-center">
+                        <div class="img">
+                            <img src="images/service-2.png" alt="" class="img-responsive">
+                        </div>
+                        <h3>Custom Mobile Apps</h3>
+                        <p>Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content text-center">
+                        <div class="img">
+                            <img src="images/service-3.png" alt="" class="img-responsive">
+                        </div>
+                        <h3>E-Commerce</h3>
+                        <p>Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content text-center">
+                        <div class="img">
+                            <img src="images/service-4.png" alt="" class="img-responsive">
+                        </div>
+                        <h3>Custom Video</h3>
+                        <p>Animation Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content text-center">
+                        <div class="img">
+                            <img src="images/service-5.png" alt="" class="img-responsive">
+                        </div>
+                        <h3>Branding</h3>
+                        <p>Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content text-center">
+                        <div class="img">
+                            <img src="images/service-6.png" alt="" class="img-responsive">
+                        </div>
+                        <h3>Custom Solutions</h3>
+                        <p>Design</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--   /*================ Step-work ================*/-->
+    <section class="step-work">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="head">
+                        <h2>How it works in 3 Steps</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="content">
+                        <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
+                        <h3>Click on the required service</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content">
+                        <div class="img"><img src="images/work-2.png" alt="" class="img-responsive"></div>
+                        <h3>Fill up the <br> required details</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content">
+                        <div class="img"><img src="images/work-3.png" alt="" class="img-responsive"></div>
+                        <h3>You’ll hear from us <br>sooner than 24 hours</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--    /*================ Footer ================*/-->
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="address">
+                        <h4>Address</h4>
+                        <div class="col-md-6 no-padding content">
+                            <div class="border">14 King of Kings, Off Aka Etinan <br> Uyo, Akwa Ibom State, Nigeria <br> 2347062718018, 2347062718018 <br> 2347062718018</div>
+                        </div>
+                        <div class="col-md-6 no-padding content">
+                            Tikon Group Inc. <br> 6335 Gulfton Str, Suite 201, <br> Houston, USA <br> support@specialmansolution.com
+                        </div>
+                        <div class="col-md-6 no-padding content" style="min-height:auto;">
+                            <h4>Social Media</h4>
+                            <ul class="social">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="col-md-7 no-padding">
+                        <h4>Our Service</h4>
+                        <ul>
+                            <li><a href="#">Website </a></li>
+                            <li><a href="#">Mobile App</a></li>
+                            <li><a href="#">E-commerce</a></li>
+                            <li><a href="#">Promotional Video</a></li>
+                            <li><a href="#">Branding</a></li>
+                            <li><a href="#">Custom Solution</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-5 no-padding">
+                        <h4>Quick Link</h4>
+                        <ul>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Portfolio </a></li>
+                            <li><a href="#">About Us </a></li>
+                            <li><a href="#">Blog </a></li>
+                            <li><a href="#">Support </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="copy">© 2017 Special Man Solution, All Rights Reserved</div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
