--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
+    <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -30,6 +31,26 @@
             <div class="row">
                 <div class="col-xs-3">
                     <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
+                </div>
+                <div class="col-xs-9">
+                    <div class="sgs-responsive-menu"></div>
+                    <div class="main-menu">
+                        <ul id="main-menu">
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Portfolio</a>
+                                <ul>
+                                    <li><a href="#">Dropdown One</a></li>
+                                    <li><a href="#">Dropdown Two</a></li>
+                                    <li><a href="#">Dropdown Three</a></li>
+                                    <li><a href="#">Dropdown Four</a></li>
+                                    <li><a href="#">Dropdown Five</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Support</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -215,6 +236,7 @@
     </footer>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
