--- a/index.html
+++ b/index.html
@@ -148,6 +148,53 @@
             </div>
         </div>
     </section>
+    <!--    /*================ Reviews ================*/-->
+    <section class="reviwes">
+        <div class="container relative">
+            <div class="row">
+                <div class="col-xs-10 col-xs-offset-2">
+                    <div class="head">
+                        <h2>See What Our Customers Say...</h2>
+                    </div>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
+                                <footer>
+                                    <h4>Fernanda Hobdi</h4>
+                                    <p>Directeur Recrutements & Evaluations</p>
+                                </footer>
+                            </div>
+
+                            <div class="item">
+                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
+                                <footer>
+                                    <h4>Fernanda Hobdi</h4>
+                                    <p>Directeur Recrutements & Evaluations</p>
+                                </footer>
+                            </div>
+
+                            <div class="item">
+                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
+                                <footer>
+                                    <h4>Fernanda Hobdi</h4>
+                                    <p>Directeur Recrutements & Evaluations</p>
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--   /*================ Step-work ================*/-->
     <section class="step-work">
         <div class="container">
@@ -180,7 +227,7 @@
             </div>
         </div>
     </section>
-<!--    /*================ Footer ================*/-->
+    <!--    /*================ Footer ================*/-->
     <footer class="main-footer">
         <div class="container">
             <div class="row">
