--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
+    <link href="css/YouTubePopUp.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -76,6 +77,18 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h2>Whether you already own a bu-siness or about to launch a new business, we offer you the best ICT solutions to get started – App, Website, Promotional Videos and general Branding.</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    /*================ Video ================*/-->
+    <section class="video">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 flex">
+                    <h2>Watch Our <br> Delivery Model <br> in Details</h2>
+                    <a href="https://www.youtube.com/watch?v=L5s0ERQt8ek" class="play"></a>
+                    
                 </div>
             </div>
         </div>
@@ -284,6 +297,7 @@
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
+    <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
