--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <body>
     <!--   /*================ Header ================*/-->
     <header class="main-header">
-        <div class="container">
+        <div class="container relative">
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-sm-3 logo-wraper">
                     <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
                 </div>
-                <div class="col-xs-9">
+                <div class="col-sm-9 col-xs-12">
                     <div class="sgs-responsive-menu"></div>
                     <div class="main-menu">
                         <ul id="main-menu">
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-xs-12 flex">
                     <h2>Watch Our <br> Delivery Model <br> in Details</h2>
-                    <a href="https://www.youtube.com/watch?v=L5s0ERQt8ek" class="play"></a>
+                    <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
                     
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-1.png" alt="" class="img-responsive">
@@ -113,7 +113,7 @@
                         <p>Development</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-2.png" alt="" class="img-responsive">
@@ -122,7 +122,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-3.png" alt="" class="img-responsive">
@@ -131,7 +131,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-4.png" alt="" class="img-responsive">
@@ -140,7 +140,7 @@
                         <p>Animation Design</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-5.png" alt="" class="img-responsive">
@@ -149,7 +149,7 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content text-center">
                         <div class="img">
                             <img src="images/service-6.png" alt="" class="img-responsive">
@@ -165,7 +165,7 @@
     <section class="reviwes">
         <div class="container relative">
             <div class="row">
-                <div class="col-xs-10 col-xs-offset-2">
+                <div class="col-md-10 col-md-offset-2 col-xs-12">
                     <div class="head">
                         <h2>See What Our Customers Say...</h2>
                     </div>
@@ -219,19 +219,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content">
                         <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
                         <h3>Click on the required service</h3>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content">
                         <div class="img"><img src="images/work-2.png" alt="" class="img-responsive"></div>
                         <h3>Fill up the <br> required details</h3>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="content">
                         <div class="img"><img src="images/work-3.png" alt="" class="img-responsive"></div>
                         <h3>You’ll hear from us <br>sooner than 24 hours</h3>
@@ -244,7 +244,7 @@
     <footer class="main-footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 col-sm-7">
                     <div class="address">
                         <h4>Address</h4>
                         <div class="col-md-6 no-padding content">
@@ -263,8 +263,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5">
-                    <div class="col-md-7 no-padding">
+                <div class="col-md-5 col-sm-5">
+                    <div class="col-md-7 no-padding list">
                         <h4>Our Service</h4>
                         <ul>
                             <li><a href="#">Website </a></li>
@@ -275,7 +275,7 @@
                             <li><a href="#">Custom Solution</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-5 no-padding">
+                    <div class="col-md-5 no-padding list">
                         <h4>Quick Link</h4>
                         <ul>
                             <li><a href="#">Services</a></li>
