done about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-    <title>SGS - HOME</title>
+    <title>SGS - About</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
@@ -25,7 +25,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body id="about-page">
     <!--   /*================ Header ================*/-->
     <header class="main-header">
         <div class="container relative">
@@ -61,14 +61,9 @@
         <div class="container relative">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="heading">
-                        <h1>Excellent Delivery <br> & Time Concious <br> with every</h1>
-                        <h2>Project </h2>
-                        <a href="#" class="button btn">Begin Here</a>
-                    </div>
+                    <h2>Who we are</h2>
                 </div>
             </div>
-            <div class="women-pic"><img class="img-responsive" src="images/banner-women.png" alt=""></div>
         </div>
     </section>
     <!--    /*================ Banner bottom ================*/-->
@@ -76,19 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>Whether you already own a bu-siness or about to launch a new business, we offer you the best ICT solutions to get started – App, Website, Promotional Videos and general Branding.</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--    /*================ Video ================*/-->
-    <section class="video">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 flex">
-                    <h2>Watch Our <br> Delivery Model <br> in Details</h2>
-                    <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                    
+                    <h2>We deliver custom strategies for App and video development that help your brand communicate to the audiences that matter most</h2>
                 </div>
             </div>
         </div>
@@ -99,7 +82,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="head">
-                        <h2>Choose to get started...</h2>
+                        <h2>Our Services</h2>
                     </div>
                 </div>
             </div>
@@ -161,81 +144,13 @@
             </div>
         </div>
     </section>
-    <!--    /*================ Reviews ================*/-->
-    <section class="reviwes">
-        <div class="container relative">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-2 col-xs-12">
-                    <div class="head">
-                        <h2>See What Our Customers Say...</h2>
-                    </div>
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                        </ol>
-
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
-                                <footer>
-                                    <h4>Fernanda Hobdi</h4>
-                                    <p>Directeur Recrutements & Evaluations</p>
-                                </footer>
-                            </div>
-
-                            <div class="item">
-                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
-                                <footer>
-                                    <h4>Fernanda Hobdi</h4>
-                                    <p>Directeur Recrutements & Evaluations</p>
-                                </footer>
-                            </div>
-
-                            <div class="item">
-                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
-                                <footer>
-                                    <h4>Fernanda Hobdi</h4>
-                                    <p>Directeur Recrutements & Evaluations</p>
-                                </footer>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--   /*================ Step-work ================*/-->
-    <section class="step-work">
+    <!--    /*================ Service Request ================*/-->
+    <section class="service-request">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12">
-                    <div class="head">
-                        <h2>How it works in 3 Steps</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-4">
-                    <div class="content">
-                        <div class="img"><img src="images/work-1.png" alt="" class="img-responsive"></div>
-                        <h3>Click on the required service</h3>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="content">
-                        <div class="img"><img src="images/work-2.png" alt="" class="img-responsive"></div>
-                        <h3>Fill up the <br> required details</h3>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="content">
-                        <div class="img"><img src="images/work-3.png" alt="" class="img-responsive"></div>
-                        <h3>You’ll hear from us <br>sooner than 24 hours</h3>
-                    </div>
+                <div class="col-xs-12 text-center">
+                    <p>For more detail about us, kindly click below to request <br> our company profile.</p>
+                    <a href="#" class="btn">Request for Profile</a>
                 </div>
             </div>
         </div>
