--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <![endif]-->
 </head>
 
-<body id="about-page">
+<body id="about-page page">
     <!--   /*================ Header ================*/-->
     <header class="main-header">
         <div class="container relative">
@@ -38,7 +38,7 @@
                     <div class="main-menu">
                         <ul id="main-menu">
                             <li><a href="#">Services</a></li>
-                            <li><a href="#">Portfolio</a>
+                            <li><a href="portfolio.html">Portfolio</a>
                                 <ul>
                                     <li><a href="#">Dropdown One</a></li>
                                     <li><a href="#">Dropdown Two</a></li>
