--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <![endif]-->
 </head>
 
-<body id="about-page page">
+<body id="about-page" class="page">
     <!--   /*================ Header ================*/-->
     <header class="main-header">
         <div class="container relative">
