--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     <![endif]-->
 </head>
 
-<body id="about-page page">
+<body id="portfolio-page" class="page">
     <!--   /*================ Header ================*/-->
     <header class="main-header">
         <div class="container relative">
@@ -65,96 +65,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!--    /*================ Banner bottom ================*/-->
-    <section class="banner-bootom">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <h2>We deliver custom strategies for App and video development that help your brand communicate to the audiences that matter most</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--    /*================ Service ================*/-->
-    <section class="service">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="head">
-                        <h2>Our Services</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-4">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-1.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Website</h3>
-                        <p>Development</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-2.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Mobile Apps</h3>
-                        <p>Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-3.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>E-Commerce</h3>
-                        <p>Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-4.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Video</h3>
-                        <p>Animation Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-5.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Branding</h3>
-                        <p>Design</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4">
-                    <div class="content text-center">
-                        <div class="img">
-                            <img src="images/service-6.png" alt="" class="img-responsive">
-                        </div>
-                        <h3>Custom Solutions</h3>
-                        <p>Design</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--    /*================ Service Request ================*/-->
-    <section class="service-request">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <p>For more detail about us, kindly click below to request <br> our company profile.</p>
-                    <a href="#" class="btn">Request for Profile</a>
-                </div>
-            </div>
-        </div>
-    </section>
+    </section>    
+    
     <!--    /*================ Footer ================*/-->
     <footer class="main-footer">
         <div class="container">
