--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     </header>
     <!--    /*================ Banner ================*/-->
     <section class="banner">
-        <div class="container relative">
+        <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
                     <h2>Portfolio</h2>
