--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>In case you want to reach out to us, kindly use the form below or
-email us or call us and we will get back to you in less than 24 hours.</h2>
+                    <h2>In case you want to reach out to us, kindly use the form below or email us or call us and we will get back to you in less than 24 hours.</h2>
                 </div>
             </div>
         </div>
@@ -82,58 +81,89 @@ email us or call us and we will get back to you in less than 24 hours.</h2>
         <div class="container">
             <div class="row">
                 <form action="#">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                         <div class="form-left">
                             <div class="text-field text">
                                 <div class="text-field-placeholder">email</div>
                                 <div class="lines"></div>
                                 <div class="formbg"></div>
-                                <input autocomplete="off" id="name" name="name"  type="text" class="input">
+                                <input autocomplete="off" id="name" name="name" type="text" class="input">
                             </div>
                             <div class="text-field text">
                                 <div class="text-field-placeholder">Company Name</div>
                                 <div class="lines"></div>
                                 <div class="formbg"></div>
-                                <input autocomplete="off" id="name" name="name"  type="text" class="input">
+                                <input autocomplete="off" id="name" name="name" type="text" class="input">
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6">
                         <div class="form-right">
                             <div class="text-field text">
                                 <div class="text-field-placeholder">name</div>
                                 <div class="lines"></div>
                                 <div class="formbg"></div>
-                                <input autocomplete="off" id="name" name="name"  type="text" class="input">
+                                <input autocomplete="off" id="name" name="name" type="text" class="input">
                             </div>
                             <div class="text-field text">
                                 <div class="text-field-placeholder">Phone Number</div>
                                 <div class="lines"></div>
                                 <div class="formbg"></div>
-                                <input autocomplete="off" id="name" name="name"  type="text" class="input">
+                                <input autocomplete="off" id="name" name="name" type="text" class="input">
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12">
+                    <div class="col-md-12 col-xs-12">
                         <div class="text-field textarea">
-                            <div class="text-field-placeholder">Top level description of your project.</div>
+                            <div class="text-field-placeholder">Message</div>
                             <div class="lines"></div>
                             <div class="formbg"></div>
                             <textarea type="text" class="input" id="description" name="description"></textarea>
                         </div>
                     </div>
-                    <div class="col-md-12 clearfix">
+                    <div class="col-md-12 col-xs-12 clearfix">
                         <div class="text-field send">
                             <div class="lines"></div>
                             <div class="formbg"></div>
-                            <input autocomplete="off" id="name" name="name" value="Send"  type="submit" class="input submit">
+                            <input autocomplete="off" id="name" name="name" value="Send" type="submit" class="input submit">
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     </section>
-    
+    <section class="contact-address">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-3">
+                    <div class="phone clearfix">
+                        <i class="fa fa-phone"></i>
+                        <div class="text">
+                            <span>07062718018</span>
+                            <span>07062718018</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5 col-sm-5">
+                    <div class="phone clearfix">
+                        <i class="fa fa-envelope"></i>
+                        <div class="text">
+                            <span>support@specialmansolution.com</span>
+                            <span><a href="#">www.sgs.ng</a></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4">
+                    <div class="phone clearfix">
+                        <i class="fa fa-map-marker "></i>
+                        <div class="text">
+                            <span>#34 Aka Itiam Road, Uyo <br>Akwa Ibom State</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--    /*================ Footer ================*/-->
     <footer class="main-footer">
         <div class="container">
