--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="sgs-responsive-menu"></div>
                     <div class="main-menu">
                         <ul id="main-menu">
-                            <li><a href="#">Services</a></li>
+                            <li><a href="about.html">Services</a></li>
                             <li><a href="portfolio.html">Portfolio</a>
                                 <ul>
                                     <li><a href="#">Dropdown One</a></li>
@@ -49,7 +49,7 @@
                             </li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Support</a></li>
+                            <li><a href="contact.html">Support</a></li>
                         </ul>
                     </div>
                 </div>
