--- a/videos.html
+++ b/videos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-    <title>SGS - SMS Send</title>
+    <title>SGS - Videos</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700" rel="stylesheet">
