--- a/videos.html
+++ b/videos.html
@@ -83,7 +83,7 @@
                        <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
                    </div>
                     <div class="type-button">
-                        <a class="type-button-link-1" href="javascript:void(0);">2D Animation</a>
+                        <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
                     </div>
                 </div>
                 <div class="col-md-4 videos-item">
@@ -165,13 +165,13 @@
                 </div>
                 <div class="col-md-4">
                     <div class="detailes-video">
-                        <h3 class="title"></h3>
+                        <h3 class="title">2D Animation</h3>
                         <h4>Number of Days</h4>
-                        <p class="day"></p>
+                        <p class="day">7</p>
                         <h4>Video Lenght</h4>
-                        <p class="minute"></p>
+                        <p class="minute">0 - 1 minute</p>
                         <h4>Esrimated Price</h4>
-                        <p class="price"></p>
+                        <p class="price">50,000</p>
                     </div>
                 </div>
             </div>
