--- a/videos.html
+++ b/videos.html
@@ -61,7 +61,7 @@
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Videos </h2>
+                    <h2><span>Promotional</span>Videos </h2>
                 </div>
             </div>
         </div>
@@ -226,10 +226,8 @@
                             </div>
                         </div>
                         <div class="col-md-12 col-xs-12 form-padding clearfix">
-                            <div class="text-field send">
-                                <div class="lines"></div>
-                                <div class="formbg"></div>
-                                <input autocomplete="off" id="name" name="name" value="Send" type="submit" class="input submit">
+                            <div class="send">
+                                <input autocomplete="off" id="name" name="name" value="Send it over" type="submit" class="input submit">
                             </div>
                         </div>
                     </form>
