video page responsive

--- a/videos.html
+++ b/videos.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="row vides-wraper">
-                <div class="col-md-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
@@ -157,7 +157,7 @@
                         <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
                     </div>
                 </div>
-                <div class="col-md-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
@@ -166,7 +166,7 @@
                         <a class="type-button-link-2" href="javascript:void(0);">3D Animation</a>
                     </div>
                 </div>
-                <div class="col-md-4 videos-item">
+                <div class="col-md-4 col-sm-4 videos-item">
                     <div class="video-thumbnail">
                         <img src="images/inner-page-video.png" alt="">
                         <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
@@ -181,7 +181,7 @@
     <section class="contact video-form">
         <div class="container">
             <div class="row form-padding-wraper">
-                <div class="col-md-8 no-padding">
+                <div class="col-md-8 col-sm-8 no-padding">
                     <form action="#">
                         <div class="col-md-6 col-sm-6 form-padding">
                             <div class="form-left">
@@ -232,7 +232,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="detailes-video">
                         <h3 class="title"></h3>
                         <h4>Number of Days</h4>
