--- a/videos.html
+++ b/videos.html
@@ -197,6 +197,12 @@
                                     <div class="formbg"></div>
                                     <input autocomplete="off" id="name" name="name" type="text" class="input">
                                 </div>
+                                <div class="text-field text">
+                                    <div class="text-field-placeholder">Phone Number</div>
+                                    <div class="lines"></div>
+                                    <div class="formbg"></div>
+                                    <input autocomplete="off" id="name" name="name" type="text" class="input">
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 form-padding">
@@ -219,7 +225,7 @@
                         </div>
                         <div class="col-md-12 col-xs-12 form-padding">
                             <div class="text-field textarea">
-                                <div class="text-field-placeholder">Message</div>
+                                <div class="text-field-placeholder">Tell us about your Business</div>
                                 <div class="lines"></div>
                                 <div class="formbg"></div>
                                 <textarea type="text" class="input" id="description" name="description"></textarea>
